fix(css): remove fixed width to fix homepage on mobile

--- a/niaiddata.org/portal/gitops.css
+++ b/niaiddata.org/portal/gitops.css
@@ -6,10 +6,6 @@
   height: 50px;
 }
 
-.footer__version-area {
-  width: 600px;
-}
-
 .index-button-bar__thumbnail-text {
   height: 160px;
 }
